add SkillNavbar, route pages,activeUser state, conditionally render user actions

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Skillshare is a site where enyone can share his skill and create groups for private lessons, trainings, improving skills and hobbies."
     />
    
-    <title>Skill share</title>
+    <title>SkillShare</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
