add create group page, add create profile button

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Skillshare is a site where enyone can share his skill and create groups for private lessons, trainings, improving skills and hobbies."
     />
-   
+    <script src="https://kit.fontawesome.com/53f1d95cc7.js" crossorigin="anonymous"></script>
     <title>SkillShare</title>
   </head>
   <body>
