main card rounded circle cards, font logo

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     />
     <script src="https://kit.fontawesome.com/53f1d95cc7.js" crossorigin="anonymous"></script>
     <title>SkillShare</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Lobster&family=Noto+Serif:ital,wght@1,700&family=Rufina&family=Satisfy&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
